# ellingson-a2a-signed-card

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  SPEC-VERIFIED.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  sign-card.yml  staging-smoke.yml
cards/: ellingson-agent-card.json
docs/: THREAT-COVERAGE.md  architecture.md  delivery-hardening.md
docs/superpowers/plans/: 2026-06-22-signed-agent-card-pipeline.md
scripts/: demo.sh
src/ellingson_card/: __init__.py  canonical.py  card.py  cli.py  errors.py  keyless.py  keyless_verify.py  keys.py  rekor.py  serve.py  signer.py  trust.py  verifier.py
tests/: conftest.py  test_canonical.py  test_card.py  test_cli.py  test_demo.py  test_keyless.py  test_keyless_verify.py  test_keys.py  test_rekor.py  test_serve.py  test_signer.py  test_smoke.py  test_trust.py  test_verifier.py
