[project]
name = "ellingson-a2a-signed-card"
version = "0.1.0"
description = "Spec-native signed A2A Agent Card with DNSSEC/CT-attested delivery"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "rfc8785==0.1.4",
    "cryptography==49.0.0",
    "sigstore==4.4.0",
]

[project.scripts]
ellingson-card = "ellingson_card.cli:main"

[dependency-groups]
dev = [
    "hypothesis==6.156.6",
    "pytest==9.1.1",
    "ruff==0.15.21",
    "ty==0.0.59",
]
audit = [
    "pip-audit==2.10.1",
    "zizmor==1.26.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ellingson_card"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
